more theme changes
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@1929 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/unparse/web/sites/all/themes/undemocracy/style.css
+++ b/unparse/web/sites/all/themes/undemocracy/style.css
@@ -87,3 +87,20 @@
 width:700px;
 margin:0 auto 0 auto;
 }
+
+ul.links {
+width:700px;
+margin:0 auto 0 auto;
+text-align:center;
+}
+
+ul.links li {
+padding:0;
+}
+ul.links li a {
+padding:5px;
+border:4px solid #888888;
+}
+ul.links li .active {
+background-color:#888888;
+}
