--- a/unparse/web2/unview.css
+++ b/unparse/web2/unview.css
@@ -1,8 +1,84 @@
+/* -------------------  Reset styles  ---------------- */
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td
+	{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+	}
+/* remember to define focus styles! */
+:focus
+	{
+	outline: 0;
+	}
 body
-{
-	width:800px;
-}
+	{
+	line-height: 1;
+	color: black;
+	background: white;
+	}
+ol, ul
+	{
+	list-style: none;
+	}
+/* tables still need 'cellspacing="0"' in the markup */
+table
+	{
+	border-collapse: separate;
+	border-spacing: 0;
+	}
+caption, th, td
+	{
+	text-align: left;
+	font-weight: normal;
+	}
+blockquote:before, blockquote:after,
+q:before, q:after
+	{
+	content: "";
+	}
+blockquote, q
+	{
+	quotes: "" "";
+	}
+img
+	{
+	border: 0;
+	}
+/* -------------------  Now do the proper stuff  ---------------- */
+body
+	{
+	background-color: #ffffff;
+	background-image: url(/images/site/background-strap.jpg);
+	background-repeat: no-repeat;
+	background-position: 50% 50px;
+	width: 48em;
+	max-width: 100%;
+	margin: 0 auto;
+	}
+
+div#identity
+	{
+	text-align: center;
+	margin-top: 15px;
+	margin-bottom: 100px;
+	}
+
+
+
 td.maincol
 {
     width:600px;
