Just to get in step
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@2507 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/unparse/web2/unview.css
+++ b/unparse/web2/unview.css
@@ -65,6 +65,7 @@ body
 	background-image: url(/images/site/background-strap.jpg);
 	background-repeat: no-repeat;
 	background-position: 50% 50px;
+	text-align: center;
 	}
 
 div#identity
@@ -93,9 +94,17 @@ h1
 div#content
 	{
 	width: 48em;
-	max-width: 100%;
+	max-width: 90%;
 	margin: 0 auto;
+	text-align: left;
 	}
+
+h2.agendaitem
+	{
+	font-size: 1.4em;
+	}
+
+
 
 
 td.maincol
@@ -142,6 +151,8 @@ p
 }
 img.smallflag
 {
+	margin-left: -40px;
+	width: 32px;
     border: thin black solid;
     float: left; 
     clear: left;
