--- a/unparse/web2/unview.css
+++ b/unparse/web2/unview.css
@@ -104,7 +104,26 @@ h2.agendaitem
 	font-size: 1.4em;
 	}
 
+.speech
+	{
+	margin-top: 1em;
+	clear: both;
+	}
+.speech cite
+	{
+	font-size: 1.2em;
+	font-weight: bold;
+	}
+.speech p
+	{
+	margin-top: 0.5em;
+	}
 
+.act
+	{
+	margin-top: 1em;
+	font-style: italic;
+	}
 
 
 td.maincol
