Renamed #document to #documentwrap
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@2515 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/unparse/web2/unview.css
+++ b/unparse/web2/unview.css
@@ -102,10 +102,10 @@ h1
 	color: #ffffff;
 	background: #000000;
 	font-size: 1.75em;
-	padding: 0.25em;
-	text-align: center;
+	padding: 0.25em auto;
 	text-transform: capitalize;
 	margin-bottom: 0.5em;
+	zwidth: 48em;
 	}
 
 div#content
@@ -116,7 +116,7 @@ div#content
 	text-align: left;
 	}
 
-#document
+#documentwrap
 	{
 	width: 30em;
 	float: left;
