--- a/unparse/web2/unview.css
+++ b/unparse/web2/unview.css
@@ -102,10 +102,9 @@ h1
 	color: #ffffff;
 	background: #000000;
 	font-size: 1.75em;
-	padding: 0.25em auto;
+	padding: 0.25em;
 	text-transform: capitalize;
 	margin-bottom: 0.5em;
-	zwidth: 48em;
 	}
 
 div#content
@@ -133,9 +132,19 @@ div#content
 	font-weight: bold;
 	}
 
-h2.agendaitem
+.agendaitem
 	{
-	font-size: 1.4em;
+	font-size: 1.3em;
+	font-weight: bold;
+	}
+.agendaitem a
+	{
+	font-size: 0.8em;
+	}
+
+.ZZZotheraglink
+	{
+	display: none;
 	}
 
 .discussion
